printing hyperlinks should not print their href in parenthesis behind them - resolves #152

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -225,3 +225,10 @@ s {
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
 }
+
+/* Don't print link hrefs, bootstrap */
+@media print {
+  a[href]:after {
+    content: none
+  }
+}
